(PC-19261)[PRO] fix: text wrapping in booking status cell

--- a/pro/src/styles/components/pages/Bookings/BookingsRecapTable/CellsFormatter/_BookingStatusCell.scss
+++ b/pro/src/styles/components/pages/Bookings/BookingsRecapTable/CellsFormatter/_BookingStatusCell.scss
@@ -12,6 +12,10 @@
     white-space: nowrap;
   }
 
+  .bs-tooltip {
+    white-space: initial;
+  }
+
   .booking-status-booked {
     background-color: colors.$secondary;
   }
